// Generated using: https://dbdiagram.io/
// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  id integer [primary key]
  username varchar
  firstname varchar
  lastname varchar
  phone varchar
  email varchar
  role varchar
  created_at timestamp
}

Table catEntry {
  id integer [primary key]
  created_at timestamp
  type varchar
  status integer // 1 available, -1 not-available
}

Table catEntryType {
  id integer [primary key]
  name varchar
}

Table catEntryDesc {
  id integer [primary key]
  name varchar
  size integer
  price integer
}

Table inventory {
  id integer [primary key]
  qty integer
  last_modified timestamp
}

Table price {
  id integer [primary key]
  price integer
  last_modified timestamp
}


Table vendors {
  id interger [primary key]
  shortName varchar
  firstName varchar
  lastName varchar
  address1 varchar
  address2 varchar
  province varchar[3]
  country varchar
  email varchar
  phone interger
  comments varchar 
}

Table discount {
  id integer [primary key]
  name varchar
  userid  users.id
  amount integer
  percentage integer
}

Table transaction {
  id integer [primary key]
  user users.id
  item catEntry.id
  price varchar // this is not a copy of a record in the price table as the price here should represent the price the item was sold at
  time timestamp
  transactiontotal integer // this is in case the item being sold is part of a larger transaction, items being sold in groups
}


Ref: catEntry.id - catEntryDesc.id
Ref: catEntry.id - catEntryType.id
Ref: catEntry.id - inventory.id
Ref: catEntry.id - price.id
Ref: vendors.id <> catEntry.id





